Fixing album spacing

--- a/app/assets/stylesheets/album.scss
+++ b/app/assets/stylesheets/album.scss
@@ -5,6 +5,7 @@
 
 div#main {
   margin: auto;
+  padding-top: 1.5em;
   width: 770px;
   text-align: center;
   
@@ -13,9 +14,8 @@ div#main {
 div#grid {
   width: 100%;
   height: 600px;
-  margin: 1em;
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: auto 570px;
   grid-template-rows: 50% 50%;
   grid-column-gap: 1em;
   grid-row-gap: .5em;
@@ -37,8 +37,6 @@ div#album_add_container {
 }
 
 div#album_list_container {
-  border-radius: 5px;
-  padding: 1em;
   position: relative;
   grid-column-start: 2;
   grid-column-end: 2;
@@ -60,6 +58,11 @@ div#album_list_container::-webkit-scrollbar {
 
 div#album_list_container::-webkit-scrollbar-thumb {
   background-color: #707070;
+}
+
+#album_list {
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
 
 .albums {
